      - updated most of CIF special codes with the '\\' prefix to not require
        a trailing space symbol (' '). The '\\db ', '\\tb ' and '\\ddb ' codes
        were left unchanged since IUCr explicitly specifies that they should
        be followed by a space.
    - COD::UserMessage:
      - fixed parsing of messages having Unicode symbols in program and
        file names.

cod-tools (3.1.0)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_from_chemistry_opensmiles() subroutine;
      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names;
      - the 'exclude_hydrogens' option to the atom_array_from_cif()
        subroutine that excludes hydrogen atoms;
      - the get_atom_chemical_type() subroutine.
    - COD::CIF::Tags::Merge:
      - the 'tags' option to the merge_datablocks() subroutine to provide
        a list of data names to merge.
    - cif_filter:
      - distribution of '_publ_author_id_orcid' data item values from
        the global CIF data block to the rest of the data blocks.
    - cif_select:
      - the '--one-data-item-per-row' and '--one-data-item-per-column'
        options.
    - cif_sort_atoms:
      - the '--ascending-numerical', '--descending-numerical',
        '--ascending-lexical', '--descending-lexical' options.
  * Changed:
    - COD::CIF::DDL::DDLm::Validate:
      - the format of validation messages describing key uniqueness
        violations.
    - COD::CIF::Data::AtomList:
      - updated the datablock_from_atom_array() subroutine to add the
        '_atom_site_Cartn_*' CIF data items if orthogonal coordinates
        are present instead of the fractional ones.
    - cif_validate:
      - the format of validation messages describing key uniqueness
        violations.
    - codcif:
      - stopped storing stray CIF values in memory.
  * Deprecated: