@@ -93,12 +93,49 @@ sub print_message
     return;
 }
 
-#==============================================================================
-# Parse an error message, generated by print_message. To be parsed
-# correctly, program, file and data block names as well as error level must
-# not not contain colons (':'). Error level is confined to uninterrupted
-# word without colons and commas (','). Error level can be separated from
-# the rest of the message by a colon.
+###
+# Parses an error message based on the formal error message grammar [1].
+# Error messages that adhere to the aforementioned grammar can be produced
+# using the sprint_message() subroutine.
+#
+# @source [1]
+#       "EBNF grammar", supporting information of [2].
+#       doi: 10.1107/S1600576715022396/po5052sup2.txt
+# @source [2]
+#       Merkys, A., Vaitkus, A., Butkus, J., Okulič-Kazarinas, M.,
+#       Kairys, V. & Gražulis, S. (2016). COD::CIF::Parser:
+#       an error-correcting CIF parser for the Perl language.
+#       Journal of Applied Crystallography, 49.
+#       doi: 10.1107/S1600576715022396
+# @param $message
+#       Text string that contains the error message.
+# @return
+#       Reference to a hash that contains the parsed error message
+#       or an undef value if the message could not be parsed.
+#       The returned hash contains the following keys:
+#       {
+#         # Name of the program that issued the error
+#           'program'   => 'cif_parse',
+#         # Name of the file that caused the error
+#           'filename'  => 'test.cif',
+#         # Number of the line that caused the error
+#           'line_no'   => 13,
+#         # Number of the line column that caused the error
+#           'column_no' => 27,
+#         # Additional details about the location of the error
+#           'add_pos'   => 'data_parser_test_1',
+#         # Error level
+#           'err_level' => 'ERROR',
+#         # Message explaining the error
+#           'message'   => 'incorrect CIF syntax',
+#         # Lines that caused the error 
+#           'line_content' => "loop__\n" .
+#                             "^\n"
+#       }
+#
+#       All keys except for 'program' and 'message' may have
+#       undef values.
+###
 sub parse_message($)
 {
     my( $message ) = @_;
@@ -106,7 +143,7 @@ sub parse_message($)
     my $file_name_char = qr/[^\x{00}-\x{20}():\[\]\{\}\x{7F}]/;
     my $program   = qr/$file_name_char(?:$file_name_char|[ \t])*/;
     my $file_name = qr/$file_name_char+/;
-    my $err_level = qr/[A-Z][A-Z_0-9 ]*/ms;
+    my $err_level = qr/[A-Z][A-Z_0-9 -]*/ms;
     if( $message =~ /^
              ($program):[ ]?
              (?:
