@@ -1,0 +1,2 @@
+Tests the way various errors levels (i.e. "NOTE", "WARNING", "ERROR", "ERROR-7")
+are recognised and handled.
