@@ -1,0 +1,5 @@
+test_program: test_file: NOTE, this message is a note.
+test_program: test_file: WARNING, this message is a warning.
+test_program: test_file: ERROR, this message is an error.
+test_program: test_file: ERROR-42, this message is an error with a numeric code.
+test_program: test_file: ERROR_FATAL, this messages is a fatal error.
