@@ -106,7 +106,9 @@ cod-tools (unreleased)
         be followed by a space.
     - COD::UserMessage:
       - fixed parsing of messages having Unicode symbols in program and
-        file names.
+        file names;
+      - updated the parse_message() subroutine to allow the dash symbol ("-")
+        in error level strings.
 
 cod-tools (3.1.0)
 
